slow transition to do_terra()

--- a/sunclock1/app/src/main/cpp/CMakeLists.txt
+++ b/sunclock1/app/src/main/cpp/CMakeLists.txt
@@ -25,7 +25,7 @@ add_library( # Sets the name of the library.
 
 		../../../../../maths/precise.c
 		../../../../../maths/astro.c
-		../../../../../globe/globe.c
+		../../../../../globe/terra.c
 		../../../../../standalone/clock.c
 		../../../../../standalone/draw.c
 		../../../../../standalone/schrift.c
